# sentic-agent

./: .gitignore  Cargo.toml  README.md  clippy_log.txt  clippy_log_2.txt  current_branch.txt  issue_list.txt
.agent/rules/: code-style-guide.md  git-rules.md  start-task.md
crates/sentic-agent/: Cargo.toml
crates/sentic-agent/src/: main.rs
crates/sentic-common/: Cargo.toml
crates/sentic-common/src/: lib.rs
crates/sentic-ebpf/: Cargo.toml
crates/sentic-ebpf/src/: lib.rs  main.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: build_ebpf.rs  main.rs
docs/: CONTRIBUTING.md  dev-enviroment-setup.md
docs/engineering/: README.md  system-overview.md
docs/user-guides/: debugging.md  dev-enviroment-setup.md
