[package]
name = "sentic-ebpf"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
# The core library for writing eBPF in Rust
aya-ebpf = { git = "https://github.com/aya-rs/aya" }
# High-performance logging from kernel to user-space
aya-log-ebpf = { git = "https://github.com/aya-rs/aya" }
# Our shared data contract
sentic-common = { path = "../sentic-common" }

[[bin]]
name = "sentic"
path = "src/main.rs"
